--- a/src/pages/FoodDetails.css
+++ b/src/pages/FoodDetails.css
@@ -50,7 +50,10 @@
   margin-left: 10px;
 }
 
-/* .ingredientLineFood {} */
+.ingredientLineFoodComplete {
+  text-decoration: line-through;
+}
+
 .boxInstructions {
   margin-left: 10px;
   width: 95%;
